--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ EduTube/EduTube.BLL/obj/
 EduTube/EduTube.DAL/obj/
 EduTube/EduTube.GUI/obj/
 EduTube/EduTube.GUI/bin/
+EduTube/EduTube.GUI/wwwroot/videos/
