--- a/EduTube/EduTube.GUI/EduTube.GUI.csproj
+++ b/EduTube/EduTube.GUI/EduTube.GUI.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.3.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="NEST" Version="6.8.0" />
   </ItemGroup>
