--- a/EduTube/EduTube.GUI/appsettings.Development.json
+++ b/EduTube/EduTube.GUI/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EduTubeDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+   "ConnectionStrings": {
+      //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EduTubeDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EduTubeDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+   },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
